--- a/src/components/Arinc/style.scss
+++ b/src/components/Arinc/style.scss
@@ -11,6 +11,22 @@
         text-align: left;
         letter-spacing: 1.8px;
         border: none;
+        text-transform: uppercase;
+    }
+
+    .row {
+        background-color: white;
+
+        input {
+            border-right: thin solid lightgray;
+            border-bottom: 2px solid rgb(0, 0, 0);
+            padding: 0;
+            flex: 1;
+        }
+
+        input:last-child {
+            border-right: none;
+        }
     }
 
     .layout {
@@ -20,6 +36,7 @@
         background-position: top center;
         margin-left: auto;
         margin-right: auto;
+        border-top: 2px solid lightgray;
     }
 
     .ep {
@@ -35,4 +52,6 @@
     .pn {
         background-image: url("../../img/db.png");
     }
+
+
 }
