--- a/src/components/Form/InputFile/style.scss
+++ b/src/components/Form/InputFile/style.scss
@@ -17,7 +17,7 @@
     }
 
     label:hover {
-        background-color: khaki;
+        background-color: wheat;
         transition-property: background-color;
         transition-duration: 0.5s;
     }
