--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -19,7 +19,7 @@
     }
 
     select:hover {
-        background-color: khaki;
+        background-color: wheat;
         transition-property: background-color;
         transition-duration: 0.5s;
     }
