--- a/src/components/Arinc/style.scss
+++ b/src/components/Arinc/style.scss
@@ -12,6 +12,17 @@
         letter-spacing: 1.8px;
         border: none;
         text-transform: uppercase;
+
+        background-color: white;
+        transition-property: background-color;
+        transition-duration: 0.5s;
+
+        &:hover {
+            background-color: lightsteelblue;
+
+            transition-property: background-color;
+            transition-duration: 0.5s;
+        }
     }
 
     .row {
@@ -21,11 +32,16 @@
             border-right: thin solid lightgray;
             border-bottom: 2px solid rgb(0, 0, 0);
             padding: 0;
+            margin-bottom: 10px;
             flex: 1;
         }
 
         input:last-child {
             border-right: none;
+        }
+
+        &:hover {
+            background-color: white;
         }
     }
 
