--- a/src/components/Result/style.scss
+++ b/src/components/Result/style.scss
@@ -4,18 +4,30 @@
     justify-content: space-between;
     width: 100%;
 
+    background-color: white;
+    transition-property: background-color;
+    transition-duration: 0.5s;
+
     div {
         border-right: thin solid lightgray;
         flex: 1;
-        
-    padding: 3px 0;
+
+        padding: 3px 0;
     }
 
-    div:last-child{
+    div:last-child {
         border-right: none;
     }
-}
 
-.row.test{
-    background-color: antiquewhite;
+    &.test {
+        background-color: whitesmoke;
+        transition-property: background-color;
+        transition-duration: 0.5s;
+    }
+
+    &:hover {
+        background-color: wheat;
+        transition-property: background-color;
+        transition-duration: 0.5s;
+    }
 }
