add dynamic arinc header

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,13 +1,13 @@
 // App styles
 
 body {
-    padding: 0;
+    padding: 20px;
     margin: 0;
     background-color: lightgrey;
 }
 
 .App {
-    width: 1500px;
+    // width: 1500px;
     margin: 10px auto;
     padding: 20px;
     background-color: white;
