--- a/src/components/Arinc/style.scss
+++ b/src/components/Arinc/style.scss
@@ -3,14 +3,16 @@
 .Arinc {
     position: sticky;
     top: 0;
+    background-color: white;
+    border-top: thick solid lightgray;
 
     input {
         width: 100%;
+
         font-family: 'Courier New', Courier, monospace;
         font-size: 1rem;
         text-align: left;
-        letter-spacing: 1.8px;
-        border: none;
+        border: 0px;
         text-transform: uppercase;
 
         background-color: white;
@@ -19,55 +21,46 @@
 
         &:hover {
             background-color: lightsteelblue;
-
             transition-property: background-color;
             transition-duration: 0.5s;
         }
     }
 
     .row {
-        background-color: white;
-
-        input {
-            border-right: thin solid lightgray;
-            border-bottom: 2px solid rgb(0, 0, 0);
-            padding: 0;
-            margin-bottom: 10px;
-            flex: 1;
-        }
-
-        input:last-child {
-            border-right: none;
-        }
-
-        &:hover {
-            background-color: white;
-        }
+        display: flex;
+        border-bottom: thin solid lightgray;
     }
 
-    .layout {
-        width: 100%;
-        height: 90px;
-        background-size: cover;
-        background-position: top center;
-        margin-left: auto;
-        margin-right: auto;
-        border-top: 2px solid lightgray;
+    & div:last-child {
+        border-bottom: none;
     }
 
-    .ep {
-        background-image: url("../../img/ep.png");
+    .input {
+        background: url(../../img/border.png) right repeat-y;
+        flex: 1;
+        border-bottom: thick solid lightgray;
+        border-top: thin solid lightgray;
+        margin-bottom: 10px;
     }
 
-    .ea,
-    .pc {
-        background-image: url("../../img/ea.png");
+    .title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: url(../../img/border.png) right repeat-y;
+        // text-transform: uppercase;
+        
+        overflow: hidden;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 0.7rem;
+        text-align: center;
+        vertical-align: bottom;
+        padding: 3px 0;
     }
 
-    .db,
-    .pn {
-        background-image: url("../../img/db.png");
+    .vertically {
+        writing-mode: vertical-lr;
+        transform: rotate(180deg);
+        background-position: left;
     }
-
-
 }
