--- a/src/components/Result/style.scss
+++ b/src/components/Result/style.scss
@@ -1,33 +1,35 @@
-.row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
+.Result {
+    .row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
 
-    background-color: white;
-    transition-property: background-color;
-    transition-duration: 0.5s;
-
-    div {
-        border-right: thin solid lightgray;
-        flex: 1;
-
-        padding: 3px 0;
-    }
-
-    div:last-child {
-        border-right: none;
-    }
-
-    &.test {
-        background-color: whitesmoke;
+        background-color: white;
         transition-property: background-color;
         transition-duration: 0.5s;
-    }
 
-    &:hover {
-        background-color: wheat;
-        transition-property: background-color;
-        transition-duration: 0.5s;
+        div {
+            border-right: thin solid lightgray;
+            flex: 1;
+
+            padding: 3px 0;
+        }
+
+        div:last-child {
+            border-right: none;
+        }
+
+        &.test {
+            background-color: whitesmoke;
+            transition-property: background-color;
+            transition-duration: 0.5s;
+        }
+
+        &:hover {
+            background-color: wheat;
+            transition-property: background-color;
+            transition-duration: 0.5s;
+        }
     }
 }
