--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,17 +1,13 @@
 // App styles
 
 body {
-    padding: 20px;
+    padding: 0;
     margin: 0;
-    background-color: lightgrey;
+
 }
 
 .App {
-    // width: 1500px;
-    margin: 10px auto;
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     background-color: white;
-    box-shadow: 0px 3px 10px 0px rgba($color: #000000, $alpha: 0.2);
-    border-radius: 10px;
     font-family: 'Courier New', Courier, monospace;
 }
