--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -1,7 +1,7 @@
 // Form
 .Form {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-bottom: 20px;
 
     select {
