--- a/src/components/Result/style.scss
+++ b/src/components/Result/style.scss
@@ -32,4 +32,12 @@
             transition-duration: 0.5s;
         }
     }
+
+    .pagination {
+        position: sticky;
+        bottom: 0;
+        background-color: whitesmoke;
+        padding: 10px;
+        border-top: thick solid lightgrey;
+    }
 }
