--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,13 +1,15 @@
 // App styles
+html {
+    font-size: 16px;
+}
 
 body {
     padding: 0;
     margin: 0;
-
 }
 
 .App {
-    padding: 20px 20px 0 20px;
+    padding: 0 20px;
     background-color: white;
     font-family: 'Courier New', Courier, monospace;
 }
