--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -2,7 +2,8 @@
 .Form {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 20px;
+    padding: 20px 0;
+    background-color: whitesmoke;
 
     select {
         border: none;
