add blank style

--- a/src/components/Arinc/Layout/style.scss
+++ b/src/components/Arinc/Layout/style.scss
@@ -27,4 +27,9 @@
         transform: rotate(180deg);
         background-position: left;
     }
+
+    .blank{
+        background-color: whitesmoke;
+        color: rgb(172, 172, 172);
+    }
 }
